--- a/public/lang/de/changelog/index.html
+++ b/public/lang/de/changelog/index.html
@@ -201,7 +201,7 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Änderungsprotokoll</span>
+				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Änderungsprotokoll</span>
 				<span class="lg:hidden flex flex-col items-center text-3xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
 					<p>Änderungsprotokoll</p>
 				</span>
