--- a/public/lang/de/faq/index.html
+++ b/public/lang/de/faq/index.html
@@ -199,8 +199,8 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Häufig gestellte Fragen</span>
-				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
+				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Häufig gestellte Fragen</span>
+				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
 					<p>Häufig</p>
 					<p>gestellte</p>
 					<p>Fragen</p>
