--- a/public/lang/es/legal-notice/index.html
+++ b/public/lang/es/legal-notice/index.html
@@ -198,7 +198,7 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Aviso Legal</span>
+				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Aviso Legal</span>
 				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
 					<p>Aviso</p>
 					<p>Legal</p>
