--- a/public/lang/id/legal-notice/index.html
+++ b/public/lang/id/legal-notice/index.html
@@ -199,7 +199,7 @@
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Legalitas</span>
-				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
+				<span class="sm:hidden flex flex-col text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3 text-center">
 					<p>Legalitas</p>
 				</span>
 			</header>
