updated site description

--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="PlayCover allows you to run iOS apps & games in fullscreen mode with mouse, keyboard & controller support." />
+		<meta name="description" content="Run iOS apps & games in fullscreen mode with mouse, keyboard & controller support." />
 		<meta name="keywords" content="playcover, playcover download, playcover changelog, playcover donate, playcover team, playcover mac, playcover intel mac, playcover faq, playcover contact, playcover copyright, playcover legal notice" />
 		<title>PlayCover | Download</title>
 		<link href="/css/styles.css" rel="stylesheet" />
