fixed patreon logo

--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -256,9 +256,13 @@
 								</svg>
 							</div>
 						</a>
+						<!-- patreon -->
 						<a class="donate-button  transition duration-300" href="https://www.patreon.com/playcoverapp" target="_blank">
-							<div class="rounded-full bg-gray-100 hover:bg-white dark:bg-[#292929] dark:hover:bg-[#2e2e2e] shadow px-6 py-4 transition duration-300">
-								<img class="w-[5rem] md:w-[7rem] drop-shadow-sm" src="/assets/patreon-logo.png" alt="patreon logo">
+							<div class="rounded-full flex items-center space-x-2 bg-gray-100 hover:bg-white dark:bg-[#292929] dark:hover:bg-[#2e2e2e] shadow px-6 py-4 transition duration-300">
+								<div>
+									<svg class="w-7 h-7" viewBox="0 0 567.18 545.8" xmlns="http://www.w3.org/2000/svg"><circle cx="362.59" cy="204.59" fill="#e85b46" r="204.59"/><path d="M0 0h100v545.8H0z" fill="#241e12"/></svg>
+								</div>
+								<p class="text-red-500 text-xl uppercase font-bold pt-[0.1rem]">patreon</p>
 							</div>
 						</a>
 					</div>
