--- a/public/lang/ru/faq/index.html
+++ b/public/lang/ru/faq/index.html
@@ -166,7 +166,7 @@
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">Русский</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -202,7 +202,7 @@
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Часто задаваемые вопросы</span>
-				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
+				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3 text-center">
 					<p>Часто</p>
 					<p>задаваемые</p>
 					<p>вопросы</p>
