--- a/public/lang/cn/team/index.html
+++ b/public/lang/cn/team/index.html
@@ -212,16 +212,16 @@
 						<div class="space-x-1 flex items-start md:items-center">
 							<!-- icon -->
 							<div class="flex items-start md:items-center space-x-1">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 md:h-7 md:w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-7 md:w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 								</svg>
 								<!-- title -->
-								<p class="font-semibold">应用程序创建者和所有者（来源）: &nbsp;</p>
+								<p class="font-semibold pt-[0.5px] md:pt-0">创造者: &nbsp;</p>
 							</div>
 							<div class="flex items-center">
 								<!-- person -->
 								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-center">
-									<a class="" href="mailto:business@playcover.me">Alexandr Dorofeev</a>
+									<a class="" href="mailto:business@playcover.me">Alex</a>
 								</div>
 							</div>
 						</div>
