--- a/public/lang/de/changelog/index.html
+++ b/public/lang/de/changelog/index.html
@@ -213,7 +213,7 @@
 					<!-- spinning circle and dotted line -->
 					<div class="flex flex-col items-center">
 						<!-- spinning circle -->
-						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-menu-pink border-t-menu-pink border-gray-300 dark:border-gray-600 rotate-45"></div>
+						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-menu-pink border-t-menu-pink dark:border-r-menu-pink dark:border-t-menu-pink border-gray-300 dark:border-gray-600 rotate-45"></div>
 						<!-- dotted line -->
 						<div class="dotted-line border-l-2 border-dotted border-gray-300 dark:border-gray-600 h-[4.5rem]"></div>
 					</div>
