--- a/public/lang/es/changelog/index.html
+++ b/public/lang/es/changelog/index.html
@@ -201,7 +201,7 @@
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Cambios</span>
-				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
+				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3 text-center">
 					<p>Cambios</p>
 				</span>
 			</header>
@@ -212,7 +212,7 @@
 					<!-- spinning circle and dotted line -->
 					<div class="flex flex-col items-center">
 						<!-- spinning circle -->
-						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-menu-pink border-t-menu-pink border-gray-300 dark:border-gray-600 rotate-45"></div>
+						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-menu-pink border-t-menu-pink dark:border-r-menu-pink dark:border-t-menu-pink border-gray-300 dark:border-gray-600 rotate-45"></div>
 						<!-- dotted line -->
 						<div class="dotted-line border-l-2 border-dotted border-gray-300 dark:border-gray-600 h-[4.5rem]"></div>
 					</div>
