--- a/public/lang/ru/changelog/index.html
+++ b/public/lang/ru/changelog/index.html
@@ -165,7 +165,7 @@
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">Русский</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -202,7 +202,7 @@
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Журнал изменений</span>
-				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
+				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3 text-center">
 					<p>Журнал изменений</p>
 				</span>
 			</header>
@@ -213,7 +213,7 @@
 					<!-- spinning circle and dotted line -->
 					<div class="flex flex-col items-center">
 						<!-- spinning circle -->
-						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-menu-pink border-t-menu-pink border-gray-300 dark:border-gray-600 rotate-45"></div>
+						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-menu-pink border-t-menu-pink dark:border-r-menu-pink dark:border-t-menu-pink border-gray-300 dark:border-gray-600 rotate-45"></div>
 						<!-- dotted line -->
 						<div class="dotted-line border-l-2 border-dotted border-gray-300 dark:border-gray-600 h-[4.5rem]"></div>
 					</div>
