--- a/public/lang/ru/team/index.html
+++ b/public/lang/ru/team/index.html
@@ -166,7 +166,7 @@
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">Русский</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -215,16 +215,16 @@
 						<div class="space-x-1 flex items-start md:items-center">
 							<!-- icon -->
 							<div class="flex items-start md:items-center space-x-1">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-14 w-14 md:h-7 md:w-7 pb-7 md:pb-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-7 md:w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 								</svg>
 								<!-- title -->
-								<p class="font-semibold">Создатель и владелец приложения (Источник): &nbsp;</p>
+								<p class="font-semibold pt-[0.5px] md:pt-0">Создатель: &nbsp;</p>
 							</div>
 							<div class="flex items-center">
 								<!-- person -->
 								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-center">
-									<a class="" href="mailto:business@playcover.me">Alexandr Dorofeev</a>
+									<a class="" href="mailto:business@playcover.me">Alex</a>
 								</div>
 							</div>
 						</div>
