changed donate to PlayPass and applied fixes to language menu on ID lang

--- a/lang/cn/faq/index.html
+++ b/lang/cn/faq/index.html
@@ -40,11 +40,11 @@
 
 				<!-- secondary nav -->
 				<div class="hidden xl:flex items-center space-x-5">
-					<!-- donate button -->
+					<!-- playpass button -->
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
-							<button class="group donate-nav-button  bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full px-5 py-1 transition duration-300">
-								<span class="text-[1.05rem] font-semibold"> 捐赠 </span>
+							<button class="group playpass-nav-button  bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full px-5 py-1 transition duration-300">
+								<span class="text-[1.05rem] font-semibold"> 获取 PlayPass </span>
 							</button>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full transition duration-300 px-5 py-1">捐赠</button>
+					<button class="mobile-playpass-button block bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full transition duration-300 px-5 py-1">获取 PlayPass </button>
 				</div>
 			</div>
 		</nav>
@@ -620,7 +620,7 @@
 					</div>
 
 					<!-- text -->
-					<p class="pt-12 pb-8 font-light text-gray-700 dark:text-gray-100 text-3xl">通过捐赠</p>
+					<p class="pt-12 pb-8 font-light text-gray-700 dark:text-gray-100 text-3xl">通过获取 PlayPass </p>
 
 					<!-- donate options -->
 					<div class="flex items-center space-x-4 px-8 lg:px-0 pt-10 pb-10">
