--- a/lang/de/team/index.html
+++ b/lang/de/team/index.html
@@ -41,11 +41,11 @@
 
 				<!-- secondary nav -->
 				<div class="hidden xl:flex items-center space-x-5">
-					<!-- donate button -->
+					<!-- playpass button -->
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
-							<button class="group donate-nav-button  bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full px-5 py-1 transition duration-300">
-								<span class="text-[1.05rem] font-semibold"> Spenden </span>
+							<button class="group playpass-nav-button  bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full px-5 py-1 transition duration-300">
+								<span class="text-[1.05rem] font-semibold"> Siehe PlayPass </span>
 							</button>
 						</div>
 					</div>
@@ -188,7 +188,7 @@
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full transition duration-300 px-5 py-1">Spenden</button>
+					<button class="mobile-playpass-button block bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full transition duration-300 px-5 py-1">Siehe PlayPass </button>
 				</div>
 			</div>
 		</nav>
