--- a/lang/id/legal-notice/index.html
+++ b/lang/id/legal-notice/index.html
@@ -40,11 +40,11 @@
 
 				<!-- secondary nav -->
 				<div class="hidden xl:flex items-center space-x-5">
-					<!-- donate button -->
+					<!-- playpass button -->
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
-							<button class="group donate-nav-button  bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full px-5 py-1 transition duration-300">
-								<span class="text-[1.05rem] font-semibold"> Donasi </span>
+							<button class="group playpass-nav-button  bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full px-5 py-1 transition duration-300">
+								<span class="text-[1.05rem] font-semibold"> Mendapatkan PlayPass </span>
 							</button>
 						</div>
 					</div>
@@ -64,7 +64,7 @@
 							</button>
 
 							<!-- language menu -->
-							<div class="language-menu absolute bg-gray-100 dark:bg-body right-0 rounded-md px-[32%] pb-3 pt-6 transform transition-all duration-200 scale-0 opacity-0 -translate-y-2/4 ease-in-out">
+							<div class="language-menu absolute bg-gray-100 dark:bg-body right-0 rounded-md w-[100%] pb-3 pt-6 transform transition-all duration-200 scale-0 opacity-0 -translate-y-2/4 ease-in-out">
 								<!-- text -->
 								<ul class="space-y-4 flex flex-col items-center">
 									<li>
@@ -186,7 +186,7 @@
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full transition duration-300 px-5 py-1">Donasi</button>
+					<button class="mobile-playpass-button block bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full transition duration-300 px-5 py-1">Mendapatkan PlayPass </button>
 				</div>
 			</div>
 		</nav>
