--- a/lang/es/legal-notice/index.html
+++ b/lang/es/legal-notice/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Run iOS apps & games in fullscreen mode with mouse, keyboard & controller support." />
-		<meta name="keywords" content="playcover, playcover download, playcover changelog, playcover donate, playcover team, playcover mac, playcover intel mac, playcover faq, playcover contact, playcover copyright, playcover legal notice" />
+		<meta name="keywords" content="Play Cover, Play Cover download, Play Cover changelog, Play Cover donate, Play Cover team, Play Cover mac, Play Cover intel mac, Play Cover faq, Play Cover contact, Play Cover copyright, Play Cover legal notice, Play Cover PlayPass, PlayPass" />
 		<title>Aviso Legal | PlayCover </title>
 		<link href="/css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.ico" />
@@ -64,7 +64,7 @@
 							</button>
 
 							<!-- language menu -->
-							<div class="language-menu absolute bg-gray-100 dark:bg-body right-0 rounded-md px-[23%] pb-3 pt-6 transform transition-all duration-200 scale-0 opacity-0 -translate-y-2/4 ease-in-out">
+							<div class="language-menu absolute bg-gray-100 dark:bg-body right-0 rounded-md w-[100%] pb-3 pt-6 transform transition-all duration-200 scale-0 opacity-0 -translate-y-2/4 ease-in-out">
 								<!-- text -->
 								<ul class="space-y-4 flex flex-col items-center">
 									<li>
