--- a/lang/cn/team/index.html
+++ b/lang/cn/team/index.html
@@ -235,12 +235,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">Discord 社区管理员: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Sloooopie</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">Discord 社区管理员:</p>
+									<p>Sloooopie</p>
 								</div>
 							</div>
 						</div>
@@ -254,12 +251,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">中文社区经理：&nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">想看星星</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">中文社区经理：</p>
+									<p>想看星星</p>
 								</div>
 							</div>
 						</div>
