--- a/lang/id/team/index.html
+++ b/lang/id/team/index.html
@@ -226,10 +226,6 @@
 							</div>
 						</div>
 
-						
-
-						
-
 						<!-- discord community manager -->
 						<div class="space-x-1 flex items-start md:items-center">
 							<!-- icon -->
@@ -239,12 +235,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">Discord Manajer komunitas: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Sloooopie</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">Discord Manajer komunitas:</p>
+									<p>Sloooopie</p>
 								</div>
 							</div>
 						</div>
@@ -258,12 +251,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">Manajer Komunitas Tionghoa: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Catapalm</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">Manajer Komunitas Tionghoa:</p>
+									<p>Catapalm</p>
 								</div>
 							</div>
 						</div>
