--- a/lang/ru/team/index.html
+++ b/lang/ru/team/index.html
@@ -236,12 +236,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">Менеджер сообщества Discord: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Sloooopie</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">Менеджер сообщества Discord:</p>
+									<p>Sloooopie</p>
 								</div>
 							</div>
 						</div>
@@ -255,12 +252,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">Менеджер китайского сообщества: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Catapalm</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">Менеджер китайского сообществаr:</p>
+									<p>Catapalm</p>
 								</div>
 							</div>
 						</div>
