--- a/team/index.html
+++ b/team/index.html
@@ -235,12 +235,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">Discord Community Manager: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Sloooopie</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">Discord Community Manager:</p>
+									<p>Sloooopie</p>
 								</div>
 							</div>
 						</div>
@@ -254,12 +251,9 @@
 								</svg>
 
 								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">Chinese Community Manager: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Catapalm</p>
+								<div class="flex flex-col md:flex-row md:space-x-4">
+									<p class="pt-[0.10rem] md:pt-0 font-semibold">Chinese Community Manager:</p>
+									<p>Catapalm</p>
 								</div>
 							</div>
 						</div>
