--- a/lang/cn/changelog/index.html
+++ b/lang/cn/changelog/index.html
@@ -208,7 +208,7 @@
 
 			<section class="px-[12%] pt-14 flex space-x-5 text-gray-700 dark:text-[#ADAEAD]">
 				<!-- left side -->
-				<aside class="flex flex-col items-center">
+				<aside class="flex flex-col items-center md:-translate-x-14 md:opacity-25 transition duration-[1200ms] ease-out" data-replace='{ "md:-translate-x-14": "md:translate-x-0", "md:opacity-25": "md:opacity-100"}'>
 					<!-- spinning circle and dotted line -->
 					<div class="flex flex-col items-center">
 						<!-- spinning circle -->
@@ -293,7 +293,7 @@
 				</aside>
 
 				<!-- right side -->
-				<div class="flex flex-col">
+				<div class="flex flex-col md:translate-x-10 md:opacity-25 transition duration-[1200ms] ease-out" data-replace='{ "md:translate-x-10": "md:translate-x-0", "md:opacity-25": "md:opacity-100"}'>
 					<div class="h-20"><p class="text-sm">更多的新功能正在开发中...</p></div>
 
 					<!-- 0.7.3 -->
