--- a/lang/cn/faq/index.html
+++ b/lang/cn/faq/index.html
@@ -205,7 +205,7 @@
 				</span>
 			</header>
 
-			<section class="w-full flex flex-col items-center pt-20 space-y-14 text-md xl:text-lg">
+			<section class="w-full flex flex-col items-center pt-20 space-y-14 text-md xl:text-lg md:transition md:duration-[1200ms] md:ease-out md:opacity-30 transform md:-translate-x-5" data-replace='{"md:opacity-30": "md:opacity-100", "md:-translate-x-5": "md:translate-x-0"}'>
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
