adjusted transition speed of search field on faq pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -213,7 +213,7 @@
 					<!-- reset complete -->
 					<form class="search-bar flex text-gray-700 dark:text-gray-300 items-center px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border-2 border-gray-500 dark:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-500">
 						<!-- search field -->
-						<input class="bg-transparent outline-none w-[100%] xl:w-[63rem] min-h-[4.5rem]  transition-colors duration-1000 peer" type="text" name="search" placeholder="Search...">
+						<input class="bg-transparent outline-none w-[100%] xl:w-[63rem] min-h-[4.5rem]  transition-colors duration-200" type="text" name="search" placeholder="Search...">
 	
 						<!-- search icon -->
 						<svg class="search-icon h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
