adjusted border radius of search field

--- a/lang/ru/faq/index.html
+++ b/lang/ru/faq/index.html
@@ -212,7 +212,7 @@
 				<!-- search bar -->
 				<div class="px-10 xl:px-0 w-screen xl:w-auto flex justify-center">
 					<!-- reset complete -->
-					<form class="search-bar flex text-gray-700 dark:text-gray-300 items-center px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border-2 border-gray-500 dark:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200">
+					<form class="search-bar flex text-gray-700 dark:text-gray-300 items-center px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-gray-500 dark:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200">
 						<!-- search field -->
 						<input class="bg-transparent outline-none w-[100%] xl:w-[63rem] min-h-[4.5rem]  transition-colors duration-200" type="text" name="search" placeholder="Поиск...">
 	
