updated faq on mobile

--- a/faq/index.html
+++ b/faq/index.html
@@ -199,10 +199,8 @@
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden sm:flex font-semibold text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Frequently asked questions</span>
-				<span class="sm:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3 text-center">
-					<p>Frequently</p>
-					<p>asked</p>
-					<p>questions</p>
+				<span class="sm:hidden flex flex-col items-center text-6xl font-black text-gray-700 dark:text-menu-pink transition duration-200 space-y-3 text-center">
+					<p>FAQ</p>
 				</span>
 			</header>
 
@@ -215,7 +213,7 @@
 						<input class="bg-transparent outline-none w-[100%] xl:w-[63rem] min-h-[3.5rem]  transition-colors duration-200" type="text" name="search" placeholder="Search...">
 	
 						<!-- search icon -->
-						<svg class="search-icon h-[1.2rem] w-[1.2rem] md:h-[40px] md:w-[40px] text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+						<svg class="search-icon h-[1.2rem] w-[1.2rem] xl:h-[40px] xl:w-[40px] text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 							<path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
 						</svg>
 					</form>
