--- a/lang/de/faq/index.html
+++ b/lang/de/faq/index.html
@@ -211,12 +211,12 @@
 
 				<!-- search bar -->
 				<div class="px-10 xl:px-0 w-screen xl:w-auto flex justify-center">
-					<form class="search-bar flex text-gray-700 dark:text-gray-300 items-center px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-gray-500 dark:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200">
+					<form class="search-bar flex text-gray-700 dark:text-gray-300 items-center px-8 w-[83vw] xl:w-[40rem] min-h-[3.5rem] font-semibold rounded-full border border-gray-500 dark:border-logo-purple-dark  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200">
 						<!-- search field -->
-						<input class="bg-transparent outline-none w-[100%] xl:w-[63rem] min-h-[4.5rem]  transition-colors duration-200" type="text" name="search" placeholder="Suche...">
+						<input class="bg-transparent outline-none w-[100%] xl:w-[63rem] min-h-[3.5rem]  transition-colors duration-200" type="text" name="search" placeholder="Suche...">
 	
 						<!-- search icon -->
-						<svg class="search-icon h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+						<svg class="search-icon h-[1.2rem] w-[1.2rem] xl:h-[40px] xl:w-[40px] text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 							<path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
 						</svg>
 					</form>
