--- a/team/index.html
+++ b/team/index.html
@@ -243,7 +243,7 @@
 						</div>
 
 						<!-- chinese community manager -->
-						<div class="space-x-1 flex items-start md:items-center">
+						<div class="space-x-1 hidden items-start md:items-center">
 							<!-- icon -->
 							<div class="flex items-start md:items-center space-x-1">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
