update Alex to iVoider

--- a/lang/cn/legal-notice/index.html
+++ b/lang/cn/legal-notice/index.html
@@ -295,7 +295,7 @@
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 								</svg>
 								<p class="text-lg font-medium pr-2 pl-1">应用程序</p>
-								<a href="mailto:business@playcover.me">Alex - business@playcover.me</a>
+								<a href="mailto:business@playcover.me">iVoider - business@playcover.me</a>
 							</div>
 
 							<!-- website -->
