--- a/changelog/index.html
+++ b/changelog/index.html
@@ -699,7 +699,8 @@
 			<div class="w-[100vw] h-screen flex flex-col items-center justify-center">
 				<div class="contact-modal flex flex-col items-center w-[22rem] md:w-[35rem] bg-white dark:bg-[#1E1E1E] rounded-lg shadow">
 					<!-- close button -->
-					<button class=" contact-close-button absolute top-4 lg:top-4 left-[8.5rem] lg:left-[14.7rem]">
+					<div class="relative pt-4">
+						<button class=" contact-close-button absolute top-4 lg:top-4 left-[8.5rem] lg:left-[14.7rem]">
 							<svg xmlns="http://www.w3.org/2000/svg" class="text-gray-600 dark:text-gray-200 md:scale-100 transition duration-300 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
 							</svg>
@@ -729,6 +730,8 @@
 								<p class="text-lg font-medium pr-2 pl-1">Website</p>
 								<a href="mailto:aj@playcover.me">AJ - aj@playcover.me</a>
 							</div>
+
+							
 						</div>
 					</div>
 				</div>
@@ -792,4 +795,3 @@
 		<script src="/js/changelog.js"></script>
 	</body>
 </html>
-<!--  -->
