feat(js): type module set in every html for download-link.js

--- a/lang/id/faq/index.html
+++ b/lang/id/faq/index.html
@@ -747,7 +747,7 @@
 		<script src="/js/faq-search.js"></script>
 		<script src="/js/load-transitions.js"></script>
 		<script src="/js/language-button.js"></script>
-		<script src="/js/download-link.js"></script>
+		<script src="/js/download-link.js" type="module"></script>
 		<script src="/js/mobile-buttons.js"></script>
 		<script src="/js/dark-mode.js"></script>
 		<script src="/js/scroll-animations.js"></script>
