added Hades in website team

--- a/lang/es/team/index.html
+++ b/lang/es/team/index.html
@@ -271,8 +271,9 @@
 							</div>
 							<div class="flex items-center">
 								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<a class="" href="mailto:aj@playcover.me">AJ</a>
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex items-start md:items-center">
+									<a class="" href="mailto:aj@playcover.me">AJ&nbsp;</a>
+									<p>y Hades</p>
 								</div>
 							</div>
 						</div>
